--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bevy = "0.18.0"
+rand = "0.10.0"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
