--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = "0.18.0"
+bevy = {version = "0.18.0", features = ["mp3"]}
 rand = "0.10.0"
 
 # Enable a small amount of optimization in the dev profile.
